--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" href="./images/chenyirong.jpg">
 	
-<meta name="keywords" content="陈艺荣, Chen Yirong, 陈艺荣, Chen Yirong, Yirong Chen, 陈艺荣, Yirong Chen, 陈艺荣, 陈艺荣, 陈艺荣, ICE, SCUT, South China University of Technology">
-<meta name="description" content="Chen Yirong&#39;s home page">
-<meta name="360-site-verification" content="d423d8da2550ca5def68c898ec0f4a36" />
+<meta name="keywords" content="袁家惠, YUAN JIAHUI, 袁家惠, Yuan Jiahui, Yuan Jiahui, 袁家惠, Yuan Jiahui, 袁家惠, 袁家惠, 袁家惠">
+<meta name="description" content="袁家惠的主页">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
 
-<title>Chen Yirong</title>
+<title>袁家惠</title>
 
 <script type="text/javascript" async="" src="./css/ga.js"></script><script type="text/javascript">
   var _gaq = _gaq || [];
@@ -61,7 +60,7 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
     <tr>
       <td width="670">
         <div id="toptitle">
-          <h1><a href='http://www.yirongchen.com/'>Yirong Chen</a> &nbsp; <a href='http://www.yirongchen.com/'>陈艺荣</a>  </h1><h1>
+          <h1><a href='https://jiahui-yuan.github.io/'>Jiahui Yuan</a> &nbsp; <a href='https://jiahui-yuan.github.io/'>袁家惠</a>  </h1><h1>
 	   
         </h1></div>
         <h3>Ph.D Student</a></h3>
