--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="shortcut icon" href="./images/chenyirong.jpg">
 	
-<meta name="keywords" content="袁家惠, YUAN JIAHUI, 袁家惠, Yuan Jiahui, Yuan Jiahui, 袁家惠, Yuan Jiahui, 袁家惠, 袁家惠, 袁家惠">
+<meta name="keywords" content="袁家惠, YUAN JIAHUI, 袁家惠, Yuan Jiahui, Yuan Jiahui, 袁家惠, Yuan Jiahui, 食品, 食品科技, 广东海洋大学">
 <meta name="description" content="袁家惠的主页">
 <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
 
@@ -63,11 +63,11 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
           <h1><a href='https://jiahui-yuan.github.io/'>Jiahui Yuan</a> &nbsp; <a href='https://jiahui-yuan.github.io/'>袁家惠</a>  </h1><h1>
 	   
         </h1></div>
-        <h3>Ph.D Student</a></h3>
+        <h3>Graduate applicants</a></h3>
         <p>
-          <a href='http://www.scut.edu.cn/ee/'>School of Eletronic and Information Engieering</a> &nbsp; <a href='http://www.scut.edu.cn/ee/'>电子与信息学院</a> <br>
-          <a href='http://www.scut.edu.cn/'>South China University of Technology</a>  &nbsp; <a href='http://www.scut.edu.cn/'>华南理工大学</a> <br>
-          <a href="https://map.baidu.com/poi/%E5%8D%8E%E5%8D%97%E7%90%86%E5%B7%A5%E5%A4%A7%E5%AD%A6(%E4%BA%94%E5%B1%B1%E6%A0%A1%E5%8C%BA)/@12618360.90415888,2639356.0395327103,11.68z?uid=a45f647e846847649a0050da&primaryUid=1706766828930469904&ugc_type=3&ugc_ver=1&device_ratio=1&compat=1&querytype=detailConInfo&da_src=shareurl">Guangzhou, China</a><br>
+          <a href='http://www1.gdou.edu.cn/spkjxy/index.asp'>School of Food Technology</a> &nbsp; <a href='http://www1.gdou.edu.cn/spkjxy/index.asp'>食品科技学院</a> <br>
+          <a href='https://www.gdou.edu.cn/'>Guangdong Ocean University</a>  &nbsp; <a href='https://www.gdou.edu.cn/'>广东海洋大学</a> <br>
+          <a href="https://map.baidu.com/search/%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6/@12279454.435,2395091.79,19z?querytype=inf&uid=15e1e85e462ad4a159109391&wd=%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6&all=1&c=139&provider=pc-aladin&da_src=shareurl">Zhanjiang, China</a><br>
           <br>
           Email: <a href="mailto:yirong.chen@outlook.com">yirong.chen@outlook.com</a><br>
 	  LinkedIn: <a href="https://www.linkedin.com/in/chenyirong/">https://www.linkedin.com/in/chenyirong</a><br>
