--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
         </p>
       </td>
       <td>
-	<div style="float:right"><img src="/images/cyr_scut_by.jpg" border="0" width="230"></div>
+	<div style="float:right"><img src="./photo/yuanjiahui.jpg" border="0" width="150"></div>
       </td>
     </tr><tr>
   </tr></tbody>
