--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
           <a href='https://www.gdou.edu.cn/'>Guangdong Ocean University</a>  &nbsp; <a href='https://www.gdou.edu.cn/'>广东海洋大学</a> <br>
           <a href="https://map.baidu.com/search/%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6/@12279454.435,2395091.79,19z?querytype=inf&uid=15e1e85e462ad4a159109391&wd=%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6&all=1&c=139&provider=pc-aladin&da_src=shareurl">Zhanjiang, China</a><br>
           <br>
-          Email: <a href="mailto:yirong.chen@outlook.com">yirong.chen@outlook.com</a><br>
-	  LinkedIn: <a href="https://www.linkedin.com/in/chenyirong/">https://www.linkedin.com/in/chenyirong</a><br>
-	  Github: <a href="https://github.com/scutcyr/">https://github.com/scutcyr</a><br>
-	  Publons: <a href="https://publons.com/researcher/3026890/yirong-chen/">https://publons.com/researcher/3026890/yirong-chen</a><br>
-	  ORCID: <a href="http://orcid.org/0000-0002-0207-0067/">http://orcid.org/0000-0002-0207-0067</a><br>
-	  ResearchGate: <a href="https://www.researchgate.net/profile/Yirong_Chen7">https://www.researchgate.net/profile/Yirong_Chen7</a><br>
-	  CSDN: <a href="https://blog.csdn.net/m0_37201243">https://blog.csdn.net/m0_37201243</a><br>
+          Email: <a href="mailto:changehere@outlook.com">changehere@outlook.com</a><br>
+	  Github: <a href="https://github.com/Jiahui-yuan/">https://github.com/Jiahui-yuan/</a><br>
+	  Homepage: <a href="https://jiahui-yuan.github.io/">https://jiahui-yuan.github.io/</a><br>
         </p>
       </td>
       <td>
@@ -87,11 +83,9 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 
 <h2>Biography</h2>
   <p>
-  I am currently a Ph.D. student with <a href='http://www.scut.edu.cn/ee/'>School of Eletronic and Information Engieering</a>, <a href='http://www.scut.edu.cn/'>South China University of Technology</a>, China, where I obtained my bachelor degree. My research interest mainly lies in <em>Natural Language Processing(NLP)</em>, <em>Computer Vision(CV)</em>, <em>Deep Learning(DL)</em>, <em>Image Processing</em> and <em>Dialogue system</em>.
+  Yuan Jiahui, a member of the Communist Youth League, is currently applying for a graduate student at <a href='http://www.scut.edu.cn/'>South China University of Technology</a>. She is a 2014 undergraduate student in food quality and safety at the School of Food Science and Technology, Guangdong Ocean University. She has been awarded the National Inspirational Scholarship, Guangdong Ocean University Outstanding Student Scholarship, "Three Good Students", and "Excellent League Member" for three consecutive years.
   </p>
-  <p>
-  I am advised by Prof. <a href='http://dblp.uni-trier.de/pers/hc/x/Xu:Xiangmin'>Xiangmin Xu</a> and Associate Prof. <a href='https://dblp.uni-trier.de/pers/hd/x/Xing:Xiaofen'>Xiaofen Xing</a> in SCUT and co-advised by Prof. <a href='http://sydney.edu.au/engineering/people/dacheng.tao.php'>Dacheng Tao</a> in USYD.
-  </p>
+
 
 <h2>Education & Experience</h2>
 <ul>
