--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 
 <h2>Biography</h2>
   <p>
-  Yuan Jiahui, a member of the Communist Youth League, is currently applying for a graduate student at <a href='http://www.scut.edu.cn/'>South China University of Technology</a>. She is a 2014 undergraduate student in food quality and safety at the School of Food Science and Technology, Guangdong Ocean University. She has been awarded the National Inspirational Scholarship, Guangdong Ocean University Outstanding Student Scholarship, "Three Good Students", and "Excellent League Member" for three consecutive years.
+  Yuan Jiahui, a member of the Communist Youth League, is currently applying for a graduate student at <a href='http://www.scut.edu.cn/'>South China University of Technology</a>. She graduated from Guangdong Ocean University in 2014 with a bachelor's degree in food quality and safety. She has been awarded the National Inspirational Scholarship, Guangdong Ocean University Outstanding Student Scholarship, "Three Good Students", and "Excellent League Member" for three consecutive years.
   </p>
 
 
