--- a/index.html
+++ b/index.html
@@ -83,22 +83,17 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 
 <h2>Biography</h2>
   <p>
-  Yuan Jiahui, a member of the Communist Youth League, is currently applying for a graduate student at <a href='http://www.scut.edu.cn/'>South China University of Technology</a>. She graduated from Guangdong Ocean University in 2014 with a bachelor's degree in food quality and safety. She has been awarded the National Inspirational Scholarship, Guangdong Ocean University Outstanding Student Scholarship, "Three Good Students", and "Excellent League Member" for three consecutive years.
+  Yuan Jiahui, a member of the Communist Youth League, is currently applying for a graduate student at <a href='http://www.scut.edu.cn/'>South China University of Technology</a>. She graduated from Guangdong Ocean University in 2019 with a bachelor's degree in food quality and safety. She has been awarded the National Inspirational Scholarship, Guangdong Ocean University Outstanding Student Scholarship, "Three Good Students", and "Excellent League Member" for three consecutive years.
   </p>
 
 
 <h2>Education & Experience</h2>
 <ul>
   <li>
-  2019.09-Present&nbsp;&nbsp;&nbsp;&nbsp;<b>South China University of Technology</b>
+  2014.09-2019.06&nbsp;&nbsp;&nbsp;&nbsp;<b>Guangdong Ocean University</b>
   </li>
-  <b>Ph.D. Candidate</b>, Information and Communication Engineering
+  <b>B.E.</b>, Food Quality and Safety
 
-
-  <li>
-  2015.09-2019.06&nbsp;&nbsp;&nbsp;&nbsp;<b>South China University of Technology</b>
-  </li>
-  <b>B.E. </b>, Electronic Science and Technology
 </ul>
 
 <h2>Professional Activities</h2>
