--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" class="cye-nm">
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="shortcut icon" href="./images/chenyirong.jpg">
+<link rel="shortcut icon" href="./photo/yuanjiahui.jpg">
 	
 <meta name="keywords" content="袁家惠, YUAN JIAHUI, 袁家惠, Yuan Jiahui, Yuan Jiahui, 袁家惠, Yuan Jiahui, 食品, 食品科技, 广东海洋大学">
 <meta name="description" content="袁家惠的主页">
