--- a/index.html
+++ b/index.html
@@ -142,7 +142,15 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 
 <h2>Honors</h2>
 <ul>
-<li>2015.10&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学三好学生</a> </li>
+<li>2015.10&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学三好学生</a></em> (<b>广东海洋大学</b>)</li>
+<li>2016.05&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学优秀团员</a></em> (<b>广东海洋大学委员会</b>)</li>
+<li>2014.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学武术协会跆拳道优秀学员</a></em> (<b>广东海洋大学武术协会</b>)</li>
+<li>2016.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2015-2016年度广东海洋大学三好学生</a></em> (<b>广东海洋大学</b>)</li>
+<li>2016.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2015-2016年度广东海洋大学武术协会跆拳道优秀教练</a></em> (<b>广东海洋大学武术协会</b>)</li>
+<li>2018.01&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2016-2017年度广东海洋大学三好学生</a></em> (<b>广东海洋大学</b>)</li>
+<li>2018.05&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2016-2017年度广东海洋大学优秀团员</a></em> (<b>广东海洋大学委员会</b>)</li>
+
+
 
 	
 </ul>
