--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 	
  </ul>
 
-<h2>Honors</h2>
+<h2>Award</h2>
 <ul>
+<h4>Honor</h4>
 <li>2015.10&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学三好学生</a></em> (<b>广东海洋大学</b>)</li>
 <li>2016.05&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学优秀团员</a></em> (<b>广东海洋大学委员会</b>)</li>
 <li>2014.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014-2015年度广东海洋大学武术协会跆拳道优秀学员</a></em> (<b>广东海洋大学武术协会</b>)</li>
@@ -150,7 +151,13 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
 <li>2018.01&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2016-2017年度广东海洋大学三好学生</a></em> (<b>广东海洋大学</b>)</li>
 <li>2018.05&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2016-2017年度广东海洋大学优秀团员</a></em> (<b>广东海洋大学委员会</b>)</li>
 
-
+<h4>Competitions</h4>
+<li>2017.04&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2017年湛江市首届跆拳道公开赛暨电子竞技挑战赛女子青年组51kg-55kg竞技第一名</a></em> (<b>湛江市体育局</b>)</li>
+<li>2014.11&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2014年广东海洋大学食品科技学院十大歌手比赛优秀奖</a></em> (<b>广东海洋大学</b>)</li>
+<li>2015.05&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2015年广东海洋大学食品科技学院食品安全宣传标语设计大赛优秀奖</a></em> (<b>广东海洋大学</b>)</li>
+<li>2015.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2015年广东海洋大学校章知识竞赛二等奖</a></em> (<b>广东海洋大学</b>)</li>
+<li>2015.12&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2015年广东海洋大学田径运动会女子3000米第八名</a></em> (<b>广东海洋大学</b>)</li>
+<li>2016.11&nbsp;&nbsp;&nbsp;&nbsp;<a href="">2016年广东海洋大学田径运动会女子组铅球第八名</a></em> (<b>广东海洋大学</b>)</li>
 
 	
 </ul>
@@ -183,12 +190,24 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
   </li>   
 </ol>
 
-<ol>
+
 <h4>Work-study</h4>
+<ol>
   <li>
   2014.11-2015.06&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="">广东海洋大学图书馆员工</a></b>
   </li>
-	
+  <li>
+  2015.09-2017.06&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="">广东海洋大学饭堂员工</a></b>
+  </li>
+  <li>
+  2017.03-2017.06&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="">湛江市麻章区新世纪幼儿园跆拳道教练</a></b>
+  </li>
+  <li>
+  2017.07-2017.09&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="">湛江市出入境检验检疫局检疫员</a></b>
+  </li>
+  <li>
+  2018.07-2019.06&nbsp;&nbsp;&nbsp;&nbsp;<b><a href="">深圳市本初商务文化传播有限公司业务员</a></b>
+  </li>
 </ol>
 
 
