--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) #cye-workaround-body
           <a href='https://www.gdou.edu.cn/'>Guangdong Ocean University</a>  &nbsp; <a href='https://www.gdou.edu.cn/'>广东海洋大学</a> <br>
           <a href="https://map.baidu.com/search/%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6/@12279454.435,2395091.79,19z?querytype=inf&uid=15e1e85e462ad4a159109391&wd=%E5%B9%BF%E4%B8%9C%E6%B5%B7%E6%B4%8B%E5%A4%A7%E5%AD%A6&all=1&c=139&provider=pc-aladin&da_src=shareurl">Zhanjiang, China</a><br>
           <br>
-          Email: <a href="mailto:changehere@outlook.com">changehere@outlook.com</a><br>
+          Email: <a href="mailto:changehere@outlook.com">jiahui.yuan@foxmail.comm</a><br>
 	  Github: <a href="https://github.com/Jiahui-yuan/">https://github.com/Jiahui-yuan/</a><br>
 	  Homepage: <a href="https://jiahui-yuan.github.io/">https://jiahui-yuan.github.io/</a><br>
         </p>
